--- a/index.html
+++ b/index.html
@@ -1,37 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Creative Work</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="./images/content.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  </head>
 
-<body>
+  <body>
     <!-- Header Section -->
     <header class="container">
-        <div class="header">
-            <div class="logo poppins-bold">
-                <h2>wOrk</h2>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div>
-                <button class="btn-primary poppins-bold">Explore</button>
-            </div>
+      <div class="header">
+        <div class="logo poppins-bold">
+          <h2>wOrk</h2>
         </div>
+        <div>
+          <ul class="nav-item poppins-semibold">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <button class="btn-primary poppins-bold">Explore</button>
+        </div>
+      </div>
     </header>
 
+    <main>
+      <!-- Banner Section -->
+      <section class="banner container">
+        <div class="left-banner">
+          <div class="left-image">
+            <img class="img-banner" src="./images/banner-bg.png" alt="" />
+          </div>
+          <div class="left-side">
+            <h2 class="banner-title poppins-bold">
+              Creativity Is The <br />
+              Key Of Success
+            </h2>
+            <p class="poppins-regular banner-paragraph">
+              Our mission is to provide quality English language instruction a
+              variety of courses to international and local students in a
+              professional and supportive atmosphere English teaching.
+            </p>
+            <button class="btn-primary poppins-bold">Learn More</button>
+          </div>
+        </div>
+        <div class="b-img">
+          <img src="./images/Banner.png" alt="" />
+        </div>
+      </section>
 
-    <main></main>
-    <footer></footer>
-</body>
+      <!--Content Section -->
+      <section class="container content">
+        <div class="content-img">
+          <img class="content-image" src="./images/content.png" alt="" />
+        </div>
+        <div class="content-container">
+          <div class="border">
 
+          </div>
+          <h2 class="banner-title poppins-bold">
+            Do You Know How Many <br />
+            Creative People Work Here ?
+          </h2>
+          <p class="poppins-regular content-paragraph">
+            Our mission is to provide quality English language instruction a
+            variety of courses to international and local students in a
+            professional and supportive atmosphere English teaching.
+          </p>
+          <button class="btn-primary poppins-bold">Learn More</button>
+        </div>
+      </section>
+
+      <!-- Project Section -->
+
+      <section class="project-section">
+        <div class="container project">
+          <div class="left-p">
+            <div>
+              <h2 class="banner-title poppins-bold">
+                We Are Ready To Run Your New Project!
+              </h2>
+              <button class="btn-primary poppins-bold">Learn More</button>
+            </div>
+          </div>
+          <div class="project-image">
+            <img src="./images/project-img.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h2 class="footer-content poppins-regular">Made with <span class="heart">❤</span> by Aiman Shafi️</h2>
+    </footer>
+  </body>
 </html>
